openshift/manifests/17-validatingadmissionpolicy-openshift-operator-controller-operator-controller-clusterextensions-package-uniqueness.yml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: operator-controller-clusterextensions-package-uniqueness
  namespace: openshift-operator-controller
spec:
  failurePolicy: Fail
  matchConditions:
    - expression: request.operation == 'CREATE' || oldObject.spec.packageName != object.spec.packageName
      name: only-create-or-package-change
  matchConstraints:
    resourceRules:
      - apiGroups:
          - olm.operatorframework.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterextensions
  paramKind:
    apiVersion: olm.operatorframework.io/v1alpha1
    kind: ClusterExtension
  validations:
    - expression: object.spec.packageName != params.spec.packageName
      messageExpression: '''Package "'' + string(object.spec.packageName) + ''" is already installed via ClusterExtension "'' +  string(params.metadata.name) + ''"'''
      reason: Invalid
